--- a/Orderly.Client/Components/OrderTable.razor
+++ b/Orderly.Client/Components/OrderTable.razor
@@ -77,7 +77,7 @@
                             @onclick="() => OpenViewModal(order)">
 
                             <td class="px-6 truncate font-bold text-primary">#@order.PublicId</td>
-                            <td class="px-6 truncate">@StringHelper.Truncate(order.ProductOwnerDisplayName, 15)</td>
+                            <td class="px-6 truncate">@StringHelper.Truncate(GetOtherUserName(order), 15)</td>
                             <td class="px-6 truncate">@StringHelper.Truncate(order.ProductDisplayName, 25)</td>
                             <td class="px-6 truncate">@order.Status</td>
                             <td class="px-6 truncate">@order.Quantity</td>
@@ -158,7 +158,7 @@
                 </div>
 
                 <div class="mt-2 space-y-1 text-sm text-lightfg dark:text-darkfg">
-                    <div><span class="font-medium">Owner:</span> @order.ProductOwnerDisplayName</div>
+                    <div><span class="font-medium">Owner:</span> @GetOtherUserName(order)</div>
                     <div><span class="font-medium">Product:</span> @order.ProductDisplayName</div>
                     <div><span class="font-medium">Status:</span> @order.Status</div>
                     <div><span class="font-medium">Quantity:</span> @order.Quantity</div>
@@ -268,8 +268,8 @@
 
     private List<(string Title, string Property)> Columns = new()
     {
-        ("Customer", "Customer.FullName"),
-        ("Product", "Product.Name"),
+        ("Customer", nameof(OrderDto.CustomerDisplayName)),
+        ("Product", nameof(OrderDto.ProductDisplayName)),
         ("Status", nameof(OrderDto.Status)),
         ("Quantity", nameof(OrderDto.Quantity)),
         ("Price", nameof(OrderDto.Price)),
@@ -296,16 +296,16 @@
 
         if (UserRole == "Seller")
         {
-            Columns.Add(("Customer", "Customer.FullName"));
+            Columns.Add(("Customer", nameof(OrderDto.CustomerDisplayName)));
         }
         else
         {
-            Columns.Add(("Seller", "Product.Owner.FullName"));
+            Columns.Add(("Seller", nameof(OrderDto.ProductOwnerDisplayName)));
         }
 
         Columns.AddRange(new List<(string Title, string Property)>
         {
-            ("Product", "Product.Name"),
+            ("Product", nameof(OrderDto.ProductDisplayName)),
             ("Status", nameof(OrderDto.Status)),
             ("Quantity", nameof(OrderDto.Quantity)),
             ("Price", nameof(OrderDto.Price)),
@@ -351,11 +351,11 @@
     {
         if (UserRole == "Seller")
         {
-            return order.Customer?.FullName ?? "(Deleted User)";
+            return order.CustomerDisplayName;
         }
         else
         {
-            return order.Product?.Owner?.FullName ?? "(Deleted User)";
+            return order.ProductOwnerDisplayName;
         }
     }
 
